--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -62,6 +62,9 @@ spec:
           {{- if .Values.tap.kernelModule.enabled }}
             - -kernel-module
           {{- end }}
+          {{- if .Values.tap.misc.disableCgroupIdResolution }}
+            - -disable-cgroup-id-resolution
+          {{- end }}
           {{- if .Values.tap.debug }}
             - -debug
             - -dumptracer
