Replace `DisableCgroupIdResolution` field with `ResolutionStrategy` of `MiscConfig` struct

--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -65,9 +65,8 @@ spec:
           {{- if ne .Values.tap.packetCapture "ebpf" }}
             - -disable-ebpf
           {{- end }}
-          {{- if .Values.tap.misc.disableCgroupIdResolution }}
-            - -disable-cgroup-id-resolution
-          {{- end }}
+            - -resolution-strategy
+            - '{{ .Values.tap.misc.resolutionStrategy }}'
           {{- if .Values.tap.debug }}
             - -debug
             - -dumptracer
