--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -122,7 +122,7 @@ tap:
     trafficSampleRate: 100
     tcpStreamChannelTimeoutMs: 10000
     tcpStreamChannelTimeoutShow: false
-    disableCgroupIdResolution: false
+    resolutionStrategy: auto
 logs:
   file: ""
   grep: ""
