Add `Bpf` field to `TapConfig` struct

--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -54,6 +54,10 @@ spec:
             - -packet-capture
             - '{{ .Values.tap.packetCapture }}'
             - -unixsocket
+          {{- if .Values.tap.bpf }}
+            - -bpf
+            - '{{ .Values.tap.bpf }}'
+          {{- end }}
           {{- if .Values.tap.serviceMesh }}
             - -servicemesh
           {{- end }}
