--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -18,6 +18,7 @@ tap:
     host: 127.0.0.1
   regex: .*
   namespaces: []
+  bpf: ""
   release:
     repo: https://helm.kubeshark.co
     name: kubeshark
