--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -54,9 +54,9 @@ spec:
             - -packet-capture
             - '{{ .Values.tap.packetCapture }}'
             - -unixsocket
-          {{- if .Values.tap.bpf }}
+          {{- if .Values.tap.bpfOverride }}
             - -bpf
-            - '{{ .Values.tap.bpf }}'
+            - '{{ .Values.tap.bpfOverride }}'
           {{- end }}
           {{- if .Values.tap.serviceMesh }}
             - -servicemesh
