:bookmark: Bump the Helm chart version to 52.3.68

--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -66,10 +66,10 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-service-account
@@ -83,10 +83,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
 stringData:
     LICENSE: ''
@@ -100,10 +100,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
 stringData:
   AUTH_SAML_X509_CRT: |
@@ -116,10 +116,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
 stringData:
   AUTH_SAML_X509_KEY: |
@@ -131,10 +131,10 @@ metadata:
   name: kubeshark-nginx-config-map
   namespace: default
   labels:
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
 data:
   default.conf: |
@@ -195,14 +195,15 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
 data:
     POD_REGEX: '.*'
     NAMESPACES: ''
+    BPF_OVERRIDE: ''
     SCRIPTING_SCRIPTS: '{}'
     INGRESS_ENABLED: 'false'
     INGRESS_HOST: 'ks.svc.cluster.local'
@@ -230,10 +231,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-cluster-role-default
@@ -267,10 +268,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-cluster-role-binding-default
@@ -289,10 +290,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-self-config-role
@@ -318,10 +319,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-self-config-role-binding
@@ -341,10 +342,10 @@ kind: Service
 metadata:
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-hub
@@ -363,10 +364,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-front
@@ -392,10 +393,10 @@ metadata:
 spec:
   selector:
     app.kubeshark.co/app: worker
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   ports:
   - name: metrics
@@ -410,10 +411,10 @@ metadata:
   labels:
     app.kubeshark.co/app: worker
     sidecar.istio.io/inject: "false"
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-worker-daemon-set
@@ -428,10 +429,10 @@ spec:
     metadata:
       labels:
         app.kubeshark.co/app: worker
-        helm.sh/chart: kubeshark-52.3.62
+        helm.sh/chart: kubeshark-52.3.68
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.3.62"
+        app.kubernetes.io/version: "52.3.68"
         app.kubernetes.io/managed-by: Helm
       name: kubeshark-worker-daemon-set
       namespace: kubeshark
@@ -454,7 +455,7 @@ spec:
             - -disable-ebpf
             - -resolution-strategy
             - 'auto'
-          image: 'docker.io/kubeshark/worker:v52.3.62'
+          image: 'docker.io/kubeshark/worker:v52.3.68'
           imagePullPolicy: Always
           name: sniffer
           ports:
@@ -523,7 +524,7 @@ spec:
             - -procfs
             - /hostproc
             - -disable-ebpf
-          image: 'docker.io/kubeshark/worker:v52.3.62'
+          image: 'docker.io/kubeshark/worker:v52.3.68'
           imagePullPolicy: Always
           name: tracer
           env:
@@ -606,10 +607,10 @@ kind: Deployment
 metadata:
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-hub
@@ -625,10 +626,10 @@ spec:
     metadata:
       labels:
         app.kubeshark.co/app: hub
-        helm.sh/chart: kubeshark-52.3.62
+        helm.sh/chart: kubeshark-52.3.68
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.3.62"
+        app.kubernetes.io/version: "52.3.68"
         app.kubernetes.io/managed-by: Helm
     spec:
       dnsPolicy: ClusterFirstWithHostNet
@@ -650,7 +651,7 @@ spec:
                 fieldPath: metadata.namespace
           - name: KUBESHARK_CLOUD_API_URL
             value: 'https://api.kubeshark.co'
-          image: 'docker.io/kubeshark/hub:v52.3.62'
+          image: 'docker.io/kubeshark/hub:v52.3.68'
           imagePullPolicy: Always
           readinessProbe:
             periodSeconds: 1
@@ -698,10 +699,10 @@ kind: Deployment
 metadata:
   labels:
     app.kubeshark.co/app: front
-    helm.sh/chart: kubeshark-52.3.62
+    helm.sh/chart: kubeshark-52.3.68
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.3.62"
+    app.kubernetes.io/version: "52.3.68"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-front
@@ -717,10 +718,10 @@ spec:
     metadata:
       labels:
         app.kubeshark.co/app: front
-        helm.sh/chart: kubeshark-52.3.62
+        helm.sh/chart: kubeshark-52.3.68
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.3.62"
+        app.kubernetes.io/version: "52.3.68"
         app.kubernetes.io/managed-by: Helm
     spec:
       containers:
@@ -741,11 +742,13 @@ spec:
               value: 'false'
             - name: REACT_APP_TARGETED_PODS_UPDATE_DISABLED
               value: 'false'
+            - name: REACT_APP_BPF_OVERRIDE_DISABLED
+              value: 'false'
             - name: REACT_APP_RECORDING_DISABLED
               value: 'false'
             - name: 'REACT_APP_CLOUD_LICENSE_ENABLED'
               value: 'true'
-          image: 'docker.io/kubeshark/front:v52.3.62'
+          image: 'docker.io/kubeshark/front:v52.3.68'
           imagePullPolicy: Always
           name: kubeshark-front
           livenessProbe:
